# point-classifier

./: .gitmodules  Application.hpp  CMakeLists.txt  LICENSE  README.md  gui.hpp  main.cpp  utils.hpp
shaders/: bg.frag  bg.vert  figure.frag  figure.vert
